# sub

./: .gitignore  CLAUDE.md  Manuale Utente Simulatore Sub avanzato.docx  ORIGINA_WORK.py  PORTING.md  REACT_MIGRATION_ROADMAP.md  README.md  array_setup.py  build_installer.py  canvas.py  constants.py  drawing.py  main.py  notes.md  optimization_worker.py  project_io.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  spl_calculations.py  subwoofer_simulation.py  tasks.md  test_imports_fixed.py  test_syntax.py  ui_setup.py  websocket_architecture.md
.claude/: settings.local.json
backend/: main.py  requirements.txt
backend/api/models/: events.py
core/: __init__.py  acoustic_engine.py  config.py  data_loader.py  diagnostics.py  exporter.py  optimization.py  simulation_controller.py
frontend/subwoofer-sim-ui/: README.md  package-lock.json  package.json  vite.config.ts
plot/: __init__.py  plot_styles.py  visualizer.py
scripts/: __init__.py  run_tests.py  smoke_test.py
src/: app.py  array_configs.py  calculations.py  constants.py  optimization.py  plotting.py
tests/: __init__.py  run_all_tests.py  test_acoustic_engine.py  test_comprehensive_app.py  test_config.py  test_debug_errors.py  test_diagnostics.py  test_events.py  test_frontend_integration.js  test_frontend_systematic.py  test_integration.py  test_simulation_service.py  test_systematic_debugging.py  test_validation_errors.py  test_websocket_manager.py  test_websocket_timeout.py
ui/: __init__.py  control_panel.py  dialogs.py  event_handlers.py  main_window.py
(+34 files in other folders)
